--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0, user-scalable=no"
     />
     <title>ប្រព័ន្ធវត្តមានបុគ្គលិក</title>
+    <link
+      rel="icon"
+      href="https://i.postimg.cc/ZKppCbTk/verification.png"
+      type="image/png"
+    />
 
     <script src="https://cdn.tailwindcss.com"></script>
 
